plugins {
    id 'application'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group = 'com.ticketoffice'
version = '0.0.1-SNAPSHOT'
mainClassName = 'com.ticketoffice.backend.Main'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
    // Javalin
    implementation 'io.javalin:javalin:6.1.3'
    
    // Javalin Test Tools
    testImplementation 'io.javalin:javalin-testtools:6.1.3'
    
    // HTTP Client for testing
    testImplementation 'com.squareup.okhttp3:okhttp:4.12.0'
    
    // Guice (DI)
    implementation 'com.google.inject:guice:7.0.0'

    // Jackson Core
    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.2'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2'

    // AWS Serverless Java Container (si eliges ZIP/JAR approach)
    implementation 'com.amazonaws.serverless:aws-serverless-java-container-core:2.1.4'

    // AWS SDK for DynamoDB
    implementation 'software.amazon.awssdk:dynamodb:2.20.0' // verificá versión
    implementation 'software.amazon.awssdk:regions:2.20.0'

    // AWS SDK for SES
    implementation 'software.amazon.awssdk:ses:2.20.0'

    // Testing
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
    testImplementation 'io.javalin:javalin-testtools:6.1.3'
    
    // Mockito for mocking
    testImplementation 'org.mockito:mockito-core:5.5.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.5.0'
    
    // AssertJ for fluent assertions
    testImplementation 'org.assertj:assertj-core:3.24.2'
    testImplementation 'com.squareup.okhttp3:okhttp:4.12.0'
    
    // logger
    implementation("org.slf4j:slf4j-simple:2.0.16")
    
    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
}

tasks.named('test') {
	useJUnitPlatform()
}

shadowJar {
    archiveBaseName = 'ticketoffice-backend'
    archiveClassifier = ''
    archiveVersion = ''
    mergeServiceFiles()
    manifest {
        attributes 'Main-Class': 'com.ticketoffice.backend.Main'
    }
}

build.dependsOn shadowJar